feat: Add singleton instance prisma, Add category simple crud and Add change category in swagger document
